syntax = "proto3";

package msg.checkin;

message CheckinResponse {
  bytes id = 1;
}

message CheckinData {
  optional string user = 1;
  optional string host = 2;
  optional uint32 pid = 3;
  Architecture architecture = 4;
  optional string domain = 5;
  optional uint32 integrity_level = 6;
  optional string process_name = 7;
  oneof platform_info {
    WindowsInfo windows = 8;
    LinuxInfo linux = 9;
  }
  repeated IpType ips = 10;
}

message IpType {
  oneof ip {
    uint32 ipv4 = 1;
    bytes ipv6 = 2;
  }
}

enum Architecture {
  X86 = 0;
  X86_64 = 1;
}

message LinuxInfo {
  optional string distro = 1;
  optional string kernel = 2;
  bool selinux = 3;
  optional ContainerEnv container = 4;
}

enum ContainerEnv {
  DOCKER = 0;
  CONTAINER = 1;
}

message WindowsInfo {
  uint32 build = 1;
  uint32 major = 2;
  uint32 minor = 3;
}
